--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -53,7 +53,7 @@
         </ol>
       </div>
       <div class="middleBlock">
-        <img src="pic1" alt="picture" />
+        <img src="/images/pic1.jpg" alt="picture" />
       </div>
       <div class="rightBlock">
         111111111111111111111111111111111111111111111111111
